ingress_istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio
  namespace: istio-system
spec:
  rules:
  - host: grafana.waw.training.csol.cloud
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.waw.training.csol.cloud
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  - host: kiali.waw.training.csol.cloud
    http:
      paths:
      - backend:
          serviceName: kiali
          servicePort: 20001
